syntax = "proto3";

message Compute {
    string id = 1;
    string hostname = 2;
    string ownerID = 3;
    string networkID = 4;
    string state = 5;
    string IPv4 = 6;
    string disk = 7;
    string ram = 8;
    string cpu = 9;
}

message Message {
    string message = 1;
}

service ComputeService {
    rpc createCompute(Compute) returns (Message) {}
}